[Spring 장바구니 - 2단계] 이스트(신동훈) 미션 제출합니다. (#124)
* refactor(CustomerService): 사용하지 않는 의존 필드 제거

* refactor(CustomerService): `@Transactional` 부착

* refactor(AuthenticationPrincipalArgumentResolver): 부정연산자를 사용하지 않도록 변경

- 사용하지 않는 의존 필드 제거

* refactor: product에 대한 요청의 응답 재정의

- thumbnailImage에 alt 포함하여 반환

* refactor: cart item에 대한 요청의 응답 재정의

* refactor: 주문에 대한 요청의 응답 재정의

* refactor: 예외 처리 추가

- `@Transactional` 부착

* refactor: 사용하지 않는 상품 삭제 기능 제거

* refactor(ProductAcceptanceTest): 구현 코드 변경에 따른 인수 테스트 코드 변경

* refactor(CartItemAcceptanceTest): 구현 코드 변경에 따른 인수 테스트 코드 변경

* refactor(OrderAcceptanceTest): 구현 코드 변경에 따른 인수 테스트 코드 변경

* refactor(ProductDaoTest): 구현 코드 변경에 테스트코드 변경

* refactor(ProductDaoTest): 구현 코드 변경에 테스트코드 변경

* refactor(CartItemDaoTest): 구현 코드 변경에 테스트코드 변경

* refactor(OrderDetailDaoTest): 구현 코드 변경에 테스트코드 변경

* chore: mysql 의존성 추가

* refactor(CartItemResponse): api 명세에 따라 수정

* refactor: 주문을 하면 상품의 재고가 줄어들도록 수정

* refactor: 예외 메시지 수정

* refactor(ProductServiceTest): 상품 관련 기능의 서비스 테스트 코드 작성

* refactor(CartItemServiceTest): 장바구니 아이템 관련 기능의 서비스 테스트 코드 작성

* refactor(OrderServiceTest): 주문 관련 기능의 서비스 테스트 코드 작성

* refactor(resources): 테스트 환경의 properties 파일 분리

* refactor(test/application): 통합테스트의 `@Transactional` 제거하고 truncate로 테스트 격리

* refactor: 도메인별로 패키지 분리

* refactor: controllerAdvice를 한 곳에서 관리하도록 변경

* refactor: 서비스 레이어의 dto 정의

* refactor(CartItemService): CartItem을 받는 로직의 메서드 분리