@@ -1,29 +1,30 @@
 package woowacourse.shoppingcart.acceptance;
 
-import io.restassured.RestAssured;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertAll;
+import static woowacourse.AcceptanceTestFixture.getMethodRequestWithBearerAuth;
+import static woowacourse.AcceptanceTestFixture.join;
+import static woowacourse.AcceptanceTestFixture.login;
+import static woowacourse.AcceptanceTestFixture.postMethodRequest;
+import static woowacourse.AcceptanceTestFixture.postMethodRequestWithBearerAuth;
+
 import io.restassured.response.ExtractableResponse;
 import io.restassured.response.Response;
+import java.util.List;
+import java.util.stream.Collectors;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
-import woowacourse.shoppingcart.dto.OrderRequest;
-import woowacourse.shoppingcart.domain.Orders;
-
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
-
-import static org.assertj.core.api.Assertions.assertThat;
-import static woowacourse.shoppingcart.acceptance.CartAcceptanceTest.장바구니_아이템_추가되어_있음;
-import static woowacourse.shoppingcart.acceptance.ProductAcceptanceTest.상품_등록되어_있음;
+import woowacourse.shoppingcart.cartitem.ui.dto.CartItemRequest;
+import woowacourse.shoppingcart.order.dto.OrderRequest;
+import woowacourse.shoppingcart.order.dto.OrderResponse;
+import woowacourse.shoppingcart.product.ui.dto.ProductRequest;
+import woowacourse.shoppingcart.product.ui.dto.ThumbnailImageDto;
 
 @DisplayName("주문 관련 기능")
 public class OrderAcceptanceTest extends AcceptanceTest {
-    private static final String USER = "puterism";
+    private String token;
     private Long cartId1;
     private Long cartId2;
 
@@ -31,103 +32,65 @@ public class OrderAcceptanceTest extends AcceptanceTest {
     @BeforeEach
     public void setUp() {
         super.setUp();
+        join();
+        token = login();
 
-        Long productId1 = 상품_등록되어_있음("치킨", 10_000, "http://example.com/chicken.jpg");
-        Long productId2 = 상품_등록되어_있음("맥주", 20_000, "http://example.com/beer.jpg");
+        final ProductRequest productRequest1 = new ProductRequest("치킨", 10_000, 10L,
+                new ThumbnailImageDto("http://example.com/chicken.jpg", "이미지입니다."));
+        final ProductRequest productRequest2 = new ProductRequest("피자", 10_000, 10L,
+                new ThumbnailImageDto("http://example.com/pizza.jpg", "이미지입니다."));
 
-        cartId1 = 장바구니_아이템_추가되어_있음(USER, productId1);
-        cartId2 = 장바구니_아이템_추가되어_있음(USER, productId2);
+        Long productId1 = Long.parseLong(
+                postMethodRequest(productRequest1, "/api/products").header("Location").split("/products/")[1]);
+        Long productId2 = Long.parseLong(
+                postMethodRequest(productRequest2, "/api/products").header("Location").split("/products/")[1]);
+
+        final CartItemRequest cartItemRequest1 = new CartItemRequest(productId1, 1);
+        final CartItemRequest cartItemRequest2 = new CartItemRequest(productId2, 1);
+        cartId1 = Long.parseLong(
+                postMethodRequestWithBearerAuth(cartItemRequest1, token, "/api/mycarts").header("Location")
+                        .split("/mycarts/")[1]);
+        cartId2 = Long.parseLong(
+                postMethodRequestWithBearerAuth(cartItemRequest2, token, "/api/mycarts").header("Location")
+                        .split("/mycarts/")[1]);
     }
 
     @DisplayName("주문하기")
     @Test
     void addOrder() {
-        List<OrderRequest> orderRequests = Stream.of(cartId1, cartId2)
-                .map(cartId -> new OrderRequest(cartId, 10))
-                .collect(Collectors.toList());
+        final OrderRequest orderRequest = new OrderRequest(List.of(cartId1, cartId2));
 
-        ExtractableResponse<Response> response = 주문하기_요청(USER, orderRequests);
+        final ExtractableResponse<Response> response = postMethodRequestWithBearerAuth(orderRequest, token,
+                "/api/myorders");
 
-        주문하기_성공함(response);
+        assertAll(
+                () -> assertThat(response.statusCode()).isEqualTo(HttpStatus.CREATED.value()),
+                () -> assertThat(response.header("Location")).isNotBlank()
+        );
     }
 
     @DisplayName("주문 내역 조회")
     @Test
     void getOrders() {
-        Long orderId1 = 주문하기_요청_성공되어_있음(USER, Collections.singletonList(new OrderRequest(cartId1, 2)));
-        Long orderId2 = 주문하기_요청_성공되어_있음(USER, Collections.singletonList(new OrderRequest(cartId2, 5)));
+        final OrderRequest orderRequest1 = new OrderRequest(List.of(cartId1));
+        final OrderRequest orderRequest2 = new OrderRequest(List.of(cartId2));
+        final Long orderId1 = Long.parseLong(
+                postMethodRequestWithBearerAuth(orderRequest1, token, "/api/myorders").header("Location")
+                        .split("/myorders/")[1]);
+        final Long orderId2 = Long.parseLong(
+                postMethodRequestWithBearerAuth(orderRequest2, token, "/api/myorders").header("Location")
+                        .split("/myorders/")[1]);
 
-        ExtractableResponse<Response> response = 주문_내역_조회_요청(USER);
+        final ExtractableResponse<Response> response = getMethodRequestWithBearerAuth(token,
+                "/api/myorders");
+        final List<OrderResponse> orderResponses = response.jsonPath().getList(".", OrderResponse.class);
+        final List<Long> orderResponseIds = orderResponses.stream()
+                .map(OrderResponse::getId)
+                .collect(Collectors.toUnmodifiableList());
 
-        주문_조회_응답됨(response);
-        주문_내역_포함됨(response, orderId1, orderId2);
-    }
-
-    @DisplayName("주문 단일 조회")
-    @Test
-    void getOrder() {
-        Long orderId = 주문하기_요청_성공되어_있음(USER, Arrays.asList(
-                new OrderRequest(cartId1, 2),
-                new OrderRequest(cartId2, 4)
-        ));
-
-        ExtractableResponse<Response> response = 주문_단일_조회_요청(USER, orderId);
-
-        주문_조회_응답됨(response);
-        주문_조회됨(response, orderId);
-    }
-
-    public static ExtractableResponse<Response> 주문하기_요청(String userName, List<OrderRequest> orderRequests) {
-        return RestAssured
-                .given().log().all()
-                .contentType(MediaType.APPLICATION_JSON_VALUE)
-                .body(orderRequests)
-                .when().post("/api/customers/{customerName}/orders", userName)
-                .then().log().all()
-                .extract();
-    }
-
-    public static ExtractableResponse<Response> 주문_내역_조회_요청(String userName) {
-        return RestAssured
-                .given().log().all()
-                .contentType(MediaType.APPLICATION_JSON_VALUE)
-                .when().get("/api/customers/{customerName}/orders", userName)
-                .then().log().all()
-                .extract();
-    }
-
-    public static ExtractableResponse<Response> 주문_단일_조회_요청(String userName, Long orderId) {
-        return RestAssured
-                .given().log().all()
-                .contentType(MediaType.APPLICATION_JSON_VALUE)
-                .when().get("/api/customers/{customerName}/orders/{orderId}", userName, orderId)
-                .then().log().all()
-                .extract();
-    }
-
-    public static void 주문하기_성공함(ExtractableResponse<Response> response) {
-        assertThat(response.statusCode()).isEqualTo(HttpStatus.CREATED.value());
-        assertThat(response.header("Location")).isNotBlank();
-    }
-
-    public static Long 주문하기_요청_성공되어_있음(String userName, List<OrderRequest> orderRequests) {
-        ExtractableResponse<Response> response = 주문하기_요청(userName, orderRequests);
-        return Long.parseLong(response.header("Location").split("/orders/")[1]);
-    }
-
-    public static void 주문_조회_응답됨(ExtractableResponse<Response> response) {
-        assertThat(response.statusCode()).isEqualTo(HttpStatus.OK.value());
-    }
-
-    public static void 주문_내역_포함됨(ExtractableResponse<Response> response, Long... orderIds) {
-        List<Long> resultOrderIds = response.jsonPath().getList(".", Orders.class).stream()
-                .map(Orders::getId)
-                .collect(Collectors.toList());
-        assertThat(resultOrderIds).contains(orderIds);
-    }
-
-    private void 주문_조회됨(ExtractableResponse<Response> response, Long orderId) {
-        Orders resultOrder = response.as(Orders.class);
-        assertThat(resultOrder.getId()).isEqualTo(orderId);
+        assertAll(
+                () -> assertThat(response.statusCode()).isEqualTo(HttpStatus.OK.value()),
+                () -> assertThat(orderResponseIds).containsExactly(orderId1, orderId2)
+        );
     }
 }
